# kpacman

./: AboutDialog.qml  CMakeLists.txt  Icon.qml  Main.qml  README.md  SettingsPage.qml  main.cpp
include/: Appstream.h  AppstreamComponent.h  IconProvider.h  Pacman.h  PacmanPackageFromList.h
kpacmand/: CMakeLists.txt  kpacmand.cpp  kpacmand.h  kpacmand_global.h
qml/: DownloadPage.qml  Main.qml  PackageItem.qml  RemovePage.qml  UpdatePage.qml
src/: Appstream.cpp  AppstreamComponent.cpp  IconProvider.cpp  Pacman.cpp  PacmanPackageFromList.cpp  main.cpp
